<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:gravity="center"
   android:padding="30dip">

   <TextView
      android:text="@string/boggle_label"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
   <Button
      android:id="@+id/boggle_new_game_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/new_game_label" 
      android:onClick="OnNewGameButtonClicked" />
   
   <Button
       android:id="@+id/boggle_continue_game_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/boggle_continue_game_label"
       android:onClick="OnContinueGameButtonClicked" />

   <Button
       android:id="@+id/boggle_multiplayer_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:onClick="OnMultiplayerButtonClicked"
       android:text="@string/boggle_multiplayer_Label" />

   <Button
       android:id="@+id/boggle_rules_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:onClick="OnRulesButtonClicked"
       android:text="@string/boggle_rules_button_label" />

   <Button
       android:id="@+id/boggle_acknowledgements_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:onClick="OnAcknowledgementsButtonClicked"
       android:text="@string/boggle_acknowledgements_button_label" />
</LinearLayout>