<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:gravity="center"
   android:padding="30dip">
   <TextView
      android:text="@string/name"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
   <Button
       android:id="@+id/sudoku_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/sudoku_label" 
       android:onClick="OnSudokuButtonClicked" />
   <Button
       android:id="@+id/team_members_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/team_members_label" 
       android:onClick="OnTeamMembersButtonClicked" />
   <Button
       android:id="@+id/create_error_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/create_error_label" 
       android:onClick="OnCreateErrorButtonClicked" />
   <Button
       android:id="@+id/boggle_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/boggle_label"
       android:onClick="OnBoggleButtonClicked" />
   <Button
       android:id="@+id/trickiest_part"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:text="@string/trickiest_part_button"
       android:onClick="OnTrickiestPartButtonClicked" />
       
<!--    <Button
      android:id="@+id/continue_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/continue_label" />
   <Button
      android:id="@+id/new_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/new_game_label" />
   <Button
      android:id="@+id/about_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_label" />
   <Button
      android:id="@+id/exit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/exit_label" /> -->
</LinearLayout>